# DockerScanner

./: .replit  MANIFEST.in  README.md  docker_service_manager.py  install.py  install_unix.sh  pyproject.toml  reinstall.sh  replit.nix  requirements.txt  setup.py  test_health_report.json  test_health_report.py  windows_installer.py
attached_assets/: Pasted--usr-bin-env-python3-import-docker-import-sys-import-os-import-time-import-argparse-import-subproc-1742522863363.txt  Pasted-cosmicsoul-fedora-Desktop-underDevelopment-dockerTools-DockerScanner-ls-app-zip--1742616011286.txt
docker_manager/: __init__.py
docker_manager/ai/: __init__.py  recommendation.py
docker_manager/core/: __init__.py  container_visualization.py  health_report.py  service_manager.py
docker_manager/ui/: cli.py  interactive.py  onboarding.py
docker_manager/ui/tui/: main.py  main_simple.py
docker_manager/utils/: system.py
docker_service_manager/: __init__.py
docker_service_manager.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_service_manager.py
