[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "blessed>=1.20.0",
    "docker>=7.1.0",
    "matplotlib>=3.10.1",
    "psutil>=7.0.0",
    "py-cui>=0.1.6",
    "setuptools>=77.0.3",
    "tabulate>=0.9.0",
]
